--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
         "2_FUNCTION.C": "cpp",
         "8_STRUCTURE.C": "cpp",
         "9_UNION.C": "cpp",
-        "1_POINTER_ADDRESS.C": "cpp"
+        "1_POINTER_ADDRESS.C": "cpp",
+        "5_PASS_BY_REF.C": "cpp"
     }
 }
